--- a/index.css
+++ b/index.css
@@ -1,5 +1,41 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: 'Source Sans 3', sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.container{
+    max-width: 600px;
+    outline: 1px solid red;
+    margin: 0 auto;
+}
+
+header{
+    display: flex;
+    align-items: center;
+}
+
+.user-avatar, .profile-avatar{
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+}
+
+.logo{
+    width: 100px;
+}
+
+.icon{
+    width: 35px;
+}
+
+.post-img{
+    width:  100%;
+}
+
+h2 span{
+    display: block;
 }
 
