--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ html, body {
     padding: 0;
     font-family: 'Source Sans 3', sans-serif;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .container{
@@ -12,30 +12,55 @@ html, body {
     margin: 0 auto;
 }
 
-header{
+.header{
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid rgb(154, 148, 148);
+}
+
+.post-info, .profile-info, .header{
+    padding: 15px 25px;
 }
 
 .user-avatar, .profile-avatar{
     border-radius: 50%;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
+}
+
+.profile-avatar, .icon{
+    margin-right: 10px;
 }
 
 .logo{
-    width: 100px;
+    width: 200px;
+}
+
+.profile-info{
+    display: flex;
+    align-items: center;
 }
 
 .icon{
     width: 35px;
+    cursor: pointer;
 }
 
 .post-img{
     width:  100%;
 }
 
+h2{
+    font-size: 20px;
+}
+
 h2 span{
     display: block;
+    font-weight: 400;
+}
+
+#caption{
+    font-weight: 400;
 }
 
